# rus-fritz

./: .gitignore  Cargo.toml  EngFrame.strings  LICENSE  README.md  RusFrame.strings
src/: main.rs
