[package]

name = "Rusic Fritz"
version = "0.0.2"
authors = [ "Mekhanoshin Alexey <foo@org.com>" ]

[[bin]]

name = "rus_fritz"

[dependencies]
regex = "0.1.8"
regex_macros = "0.1.8"
docopt = "0.6"
docopt_macros = "0.6"
rustc-serialize = "0.3"  # if you're using `derive(RustcDecodable)`
